# musicology

./: README.md  io.github.skythrew.musicology.json  meson.build  requirements.txt
data/: io.github.skythrew.musicology.desktop.in  io.github.skythrew.musicology.gschema.xml  io.github.skythrew.musicology.metainfo.xml.in  io.github.skythrew.musicology.service.in  meson.build  python3-requirements.json
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  en.po  fr.po  meson.build  musicology.pot
src/: main.py  meson.build  musicology.gresource.xml  musicology.in  window.py  window.ui
src/backend/: __init__.py  meson.build  mpris.py  player.py
src/data/: __init__.py  artist.py  constants.py  meson.build  song.py
src/views/: help-overlay.ui  help_overlay.py  home-song-card.ui  home.py  home.ui  meson.build  preferences.py  preferences.ui  search.py  search.ui
src/views/components/: __init__.py  artist_card.py  artist_card.ui  meson.build  song_card.py  song_card.ui
